deploy/base/sidecar/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sidecar
spec:
  selector:
    app: sidecar
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  type: ClusterIP
